--- a/src/app/components/administrar-restricciones/administrar-restricciones.component.html
+++ b/src/app/components/administrar-restricciones/administrar-restricciones.component.html
@@ -89,7 +89,7 @@
                     <tr *ngFor="let restriccion of restriccionService.restricciones" class="table-active">
                         <td>{{restriccion.victimario.apellido}}</td>
                         <td>{{restriccion.damnificada.apellido}}</td>
-                        <td>{{restriccion.administrativo.email}}</td>
+                        <td>{{restriccion.usuario.email}}</td>
                         <td>
                             <a>
                                 <i class="material-icons">editar</i>
