--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -28,8 +28,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-        <a class="dropdown-item" routerLink="../ingresar">Salir</a>
-
+        <a class="dropdown-item" routerLink="../ingresar" (click)="salir()">Salir</a>
     </form>
   </div>
 </nav>
