--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -7,7 +7,7 @@
 
                     <div class="form-group">
                         <i class="large material-icons">person</i>
-                        <input type="text"  class="form-control" 
+                        <input type="text"  class="form-control" ngbTooltip="Ingrese su email"
                             [ngClass]="{ 'is-invalid': mail.invalid && mail.touched, 'is-valid': mail.valid}" 
                             placeholder="Email" name="mail" #mail="ngModel" autofocus
                             [(ngModel)]="usuarioService.usuarioSeleccionado.email" required email>
@@ -19,16 +19,13 @@
                                       Email invalido
                                     </div>
                                   </div>
-                        <small id="emailHelp" class="form-text text-muted">Ingrese su email</small>
                         
-                       
-
                     </div>
 
                     <div class="form-group">
                         <i class="large material-icons">https</i>
                         <input type="password" class="form-control" placeholder="Password"
-                            name="contrasena" #contrasena="ngModel"
+                            name="contrasena" #contrasena="ngModel" ngbTooltip="Contraseña"
                             [ngClass]="{ 'is-invalid': contrasena.invalid && contrasena.touched, 'is-valid': contrasena.valid}" 
                             [(ngModel)]="usuarioService.usuarioSeleccionado.contrasena" required>
 
