--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -7,10 +7,11 @@
 
                     <div class="form-group">
                         <i class="large material-icons">person</i>
-                        <input type="text"  class="form-control" ngbTooltip="Ingrese su email"
+                        <input type="email"  class="form-control" ngbTooltip="Ingrese su email"
                             [ngClass]="{ 'is-invalid': mail.invalid && mail.touched, 'is-valid': mail.valid}" 
                             placeholder="Email" name="mail" #mail="ngModel" autofocus
-                            [(ngModel)]="usuarioService.usuarioSeleccionado.email" required email>
+                            [(ngModel)]="usuarioService.usuarioSeleccionado.email" 
+                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required email>
                             <div class="invalid-feedback d-block" *ngIf="mail.invalid && (mail.dirty || mail.touched)">
                                     <div *ngIf="mail.errors.required">
                                       Email requerido
