--- a/src/app/components/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/components/administrar-usuarios/administrar-usuarios.component.html
@@ -5,22 +5,27 @@
             <div class="card bg-light mb-3" style="max-width: 20rem;">
                 <div class="card-body">
                     <legend>Usuario</legend>
-                    <form #usuarioForm="ngForm" (ngSubmit)="agregarUsuario(usuarioForm)">
+                    <form #usuarioForm="ngForm" (ngSubmit)="agregarUsuario(usuarioForm)" novalidate>
                         <div class="row">
-                            <input class="form-control" type="text" name="email" #email="ngModel" placeholder="Email"
-                                [(ngModel)]="usuarioSeleccionado.email" ngbTooltip="Email">
+                            <input class="form-control" type="email" name="email" #email="ngModel" placeholder="Email"
+                                [ngClass]="{ 'is-invalid': email.invalid && email.touched, 'is-valid': email.valid}"
+                                [(ngModel)]="usuarioSeleccionado.email" ngbTooltip="Email"
+                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required email>
+                                <div class="invalid-feedback d-block" *ngIf="email.invalid && (email.dirty || email.touched)">
+                                    Email inválido                               
+                                </div>
                         </div>
                         <div class="row">
                             <div class="form-group btn-block">
                                 <select class="form-control" name="rolSeleccionado" [(ngModel)]="rolSeleccionado"
-                                    ngbTooltip="Rol de usuario">
+                                    ngbTooltip="Rol de usuario" required>
                                     <option *ngFor="let rol of roles">
                                         {{rol}}
                                       </option>
                                 </select>
                             </div>
                         </div>
-                        <button class="btn btn-primary btn-block">Agregar</button>
+                        <button class="btn btn-primary btn-block" [disabled]="!usuarioForm.valid">Agregar</button>
                     </form>
                 </div>
             </div>
