--- a/src/app/components/usuario/usuario.component.css
+++ b/src/app/components/usuario/usuario.component.css
@@ -1,3 +1,18 @@
 .container{
     margin-top: 15%
 }
+
+.form-group input{
+    padding-left: 40px;
+}
+
+.form-group{
+    position: relative;
+}
+
+.form-group i{
+    position: absolute;
+    left: 0;
+    padding: 8px 8px;
+    color: #aaa;
+}
