--- a/src/app/components/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/components/administrar-usuarios/administrar-usuarios.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-danger" role="alert" *ngIf="hayError">
+        {{ mensajeError }}
+    </div>
 <div class="container">
     <div class="row">
 
