add inputs foto y localidad/provincia

--- a/src/app/components/administrar-personas/administrar-personas.component.html
+++ b/src/app/components/administrar-personas/administrar-personas.component.html
@@ -1,6 +1,6 @@
 <div class="alert alert-danger" role="alert" *ngIf="hayError">
-        {{ mensajeError }}
-    </div>
+    {{ mensajeError }}
+</div>
 <div class="container">
     <div class="row">
         <!-- FORMULARIO DE PERSONAS -->
@@ -73,6 +73,7 @@
                             </div>
                         </div>
                         <div class="row">
+                            <label>Rol Persona</label>
                             <div class="form-group btn-block">
                                 <select class="form-control" name="rolSeleccionado" [(ngModel)]="rolSeleccionado"
                                     ngbTooltip="Rol de persona" required>
@@ -82,7 +83,7 @@
                                 </select>
                             </div>
                         </div>
-                        <label>Dirección</label>
+                        <label>Domicilio</label>
                         <div class="row">
                             <input class="form-control" type="text" name="calle" placeholder="Calle" #calle="ngModel"
                                 [(ngModel)]="personaDTOSelleccionada.direccion.calle"
@@ -116,6 +117,34 @@
                             <input class="form-control" type="text" name="localidad" placeholder="Localidad"
                                 ngbTooltip="Localidad" required>
                         </div>
+                        <div class="row">
+                            <label>Provincia</label>
+                            <div class="form-group btn-block">
+                                <select class="form-control" name="provincia" [(ngModel)]="provinciaSeleccionada"
+                                    ngbTooltip="Provincia" required>
+                                    <option value="1">Buenos Aires</option>
+                                    <option value="2">Córdoba</option>
+                                    <option value="3">Mendoza</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label>Localidad</label>
+                            <div class="form-group btn-block">
+                                <select class="form-control" name="localidad" [(ngModel)]="localidadSeleccionada"
+                                    ngbTooltip="Localidad" required>
+                                    <option value="1">San Miguel</option>
+                                </select>
+                            </div>
+                        </div>
+                        <label>Foto Agresor</label>
+                        <div class="row">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="customFile">
+                                <label class="custom-file-label" for="customFile">Choose file</label>
+                            </div>
+                        </div>
+                        <br>
                         <div class="row">
                             <button class="btn btn-primary btn-block" [disabled]="!personaForm.valid">Agregar</button>
                         </div>
