--- a/src/app/components/restricciones/restricciones.component.html
+++ b/src/app/components/restricciones/restricciones.component.html
@@ -15,7 +15,8 @@
             </tbody>
         </table>
     </div>
-    <div class="map">
+    <div id="map" class="map">
+
         <p>Mapa con ubicaciones</p>
     </div>
 </div>
