Aceptar solo imagenes

--- a/src/app/components/administrar-personas/administrar-personas.component.html
+++ b/src/app/components/administrar-personas/administrar-personas.component.html
@@ -140,7 +140,7 @@
                         <label>Foto Agresor</label>
                         <div class="row">
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="customFile">
+                                <input type="file" class="custom-file-input" id="customFile" accept="image/*">
                                 <label class="custom-file-label" for="customFile">Choose file</label>
                             </div>
                         </div>
