--- a/src/app/components/incidencias/incidencias.component.html
+++ b/src/app/components/incidencias/incidencias.component.html
@@ -1,1 +1,41 @@
-<p>incidencias works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand">Restricción: </a>
+                <a></a>
+                <div class="collapse navbar-collapse" id="navbarColor03">
+                    <ul class="navbar-nav mr-auto">
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <select class="form-control" name="tipoIncidencia"
+                            [(ngModel)]="tipoIncidencia"
+                            ngbTooltip="Tipo de Incidencia" required>
+                            <option value="1">Todas</option>
+                            <option value="2">Infracciones</option>
+                            <option value="3">Pruebas de vida</option>
+                        </select>
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col">
+            <table class="table table-light">
+                <thead>
+                    <tr>
+                        <th scope="col">Incidencia</th>
+                        <th scope="col">Fecha y Hora</th>
+                        <th scope="col">Datos relevantes</th>
+                        <th scope="col">Operaciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
