--- a/src/app/components/incidencias/incidencias.component.html
+++ b/src/app/components/incidencias/incidencias.component.html
@@ -15,7 +15,8 @@
                             <option value="2">Infracciones</option>
                             <option value="3">Pruebas de vida</option>
                         </select>
-                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-secondary my-2 my-sm-0" 
+                            type="button" (click)=cambioTexto()>Search</button>
                     </form>
                 </div>
             </nav>
